# rag-pdf-chatbot

./: README.md
rag-pdf-chatbot-api/: .gitignore  README.md  main.py  pyproject.toml
rag-pdf-chatbot-api/app/: chain.py  config.py  dependencies.py  ingestion.py  models.py
rag-pdf-chatbot-api/app/routers/: chat.py
rag-pdf-chatbot-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
rag-pdf-chatbot-frontend/src/: App.jsx  api.js  index.css
rag-pdf-chatbot-frontend/src/components/: ChatMessage.jsx  ChatScreen.jsx  ErrorBanner.jsx  Spinner.jsx  UploadScreen.jsx
